--- a/index.html
+++ b/index.html
@@ -30,14 +30,10 @@
         <div class="container hero-content">
             <h1>Julien GUERRIER</h1>
             <h2>Creative Technologist & Content Manager</h2>
-            <p>38 ans, basé à Parempuyre. Venu de l'animation, j'allie créativité visuelle et puissance technologique
-                (IA, No-Code) pour propulser la communication des entreprises locales.</p>
+            <p>38 ans, basé à Parempuyre. Venu de l'animation, j'allie créativité visuelle et puissance technologique (IA, No-Code) pour propulser la communication des entreprises locales.</p>
             <div class="cta-buttons">
-                <button onclick="document.getElementById('projects').scrollIntoView({behavior: 'smooth'})">Voir mes
-                    réalisations</button>
-                <button class="outline"
-                    onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Me
-                    contacter</button>
+                <button onclick="document.getElementById('projects').scrollIntoView({behavior: 'smooth'})">Voir mes réalisations</button>
+                <button class="outline" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Me contacter</button>
             </div>
         </div>
     </header>
