--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#skills">Expertise</a></li>
                 <li><a href="#projects">Projets</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
+            <button href="#contact"; CONTACTS</button>
         </div>
     </nav>
 
-    <!-- Hero Section (Mode Clair) -->
+    <!-- Hero Section -->
     <header id="home">
         <div class="container hero-content">
             <div class="hero-grid">
                 <!-- Colonne 1: Texte -->
                 <div class="hero-text">
                     <h1>Julien <span class="highlight-name">GUERRIER</span></h1>
-                    <h2><em>Creative Technologist</em> & <strong class="accent-text">Content Manager</strong></h2>
+                    <h2><em>RECHERCHE un poste</em> en <strong class="accent-text">Agence de COMMUNICATION</strong></h2>
                     <p><strong class="age-location">38 ans</strong>, basé à <span class="location">Parempuyre</span>. Venu de <em class="origin">l'animation</em>, j'allie <strong class="key-skill">créativité visuelle</strong> et <strong class="key-skill">puissance technologique</strong> <span class="tech-tools">(IA, No-Code)</span> pour propulser la <span class="mission">communication des entreprises locales</span>.</p>
                     <div class="cta-buttons">
                         <button onclick="document.getElementById('projects').scrollIntoView({behavior: 'smooth'})">Voir mes réalisations</button>
