Update design: clean modern style with grid background and solid colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#skills">Expertise</a></li>
                 <li><a href="#projects">Projets</a></li>
             </ul>
-            <button href="#contact"; CONTACTS</button>
+            <button href="#contact" ; CONTACTS</button>
         </div>
     </nav>
 
@@ -33,13 +33,20 @@
                 <div class="hero-text">
                     <h1>Julien <span class="highlight-name">GUERRIER</span></h1>
                     <h2><em>RECHERCHE un poste</em> en <strong class="accent-text">Agence de COMMUNICATION</strong></h2>
-                    <p><strong class="age-location">38 ans</strong>, basé à <span class="location">Parempuyre</span>. Venu de <em class="origin">l'animation</em>, j'allie <strong class="key-skill">créativité visuelle</strong> et <strong class="key-skill">puissance technologique</strong> <span class="tech-tools">(IA, No-Code)</span> pour propulser la <span class="mission">communication des entreprises locales</span>.</p>
+                    <p><strong class="age-location">38 ans</strong>, basé à <span class="location">Parempuyre</span>.
+                        Venu de <em class="origin">l'animation</em>, j'allie <strong class="key-skill">créativité
+                            visuelle</strong> et <strong class="key-skill">puissance technologique</strong> <span
+                            class="tech-tools">(IA, No-Code)</span> pour propulser la <span
+                            class="mission">communication des entreprises locales</span>.</p>
                     <div class="cta-buttons">
-                        <button onclick="document.getElementById('projects').scrollIntoView({behavior: 'smooth'})">Voir mes réalisations</button>
-                        <button class="outline" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Me contacter</button>
+                        <button onclick="document.getElementById('projects').scrollIntoView({behavior: 'smooth'})">Voir
+                            mes réalisations</button>
+                        <button class="outline"
+                            onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Me
+                            contacter</button>
                     </div>
                 </div>
-                
+
                 <!-- Colonne 2: Photo -->
                 <div class="hero-image">
                     <div class="image-wrapper">
